added interactive light, object interaction and GUI

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
-  <div id="container"></div>
+  <div id="container">
+    <div id ="hud-text" class="hud-text">
+      You searched the corpse and found a key
+    </div>
+    <div id ="interact-text" class="interact-text">
+      Press E to search the corpse
+    </div>
+  </div>
   <!--
   <script src="./jsm/libs/ammo.wasm.js"></script>
   -->
