--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>three_vite</title>
   <link rel="icon" href="favicon.png">
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./src/main.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   <!--
   <script src="./jsm/libs/ammo.wasm.js"></script>
   -->
- <script type="module" src="./main.js"></script>
+ <script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
