added loading screen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
   <div id="container">
+    <div id="blackscreen" class="blackscreen"></div>
+    <div id="loader" class="loader"></div>
     <div id ="hud-text" class="hud-text">
       You searched the corpse and found a key
     </div>
