here is the drawer handler

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <div id ="interact-text" class="interact-text">
       Press E to search the corpse
     </div>
+    <div id ="drawer1-text" class="interact-text">
+      Press E to search the left drawer
+    </div>
+    <div id ="drawer2-text" class="interact-text">
+      Press E to search the right drawer 
+    </div>
+    <div id ="gooddrawer-text" class="interact-text">
+      Press E to search the center drawer
+    </div>
   </div>
   <!--
   <script src="./jsm/libs/ammo.wasm.js"></script>
