--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <div id="container">
     <div id="blackscreen" class="blackscreen"></div>
+    <div id="damage-overlay" class="damage-overlay"></div>
     <div id="loader" class="loader"></div>
     <div id ="hud-text" class="hud-text">
       You searched the corpse and found a key
