voici l'avancement avec le couloir

--- a/index.html
+++ b/index.html
@@ -21,13 +21,37 @@
       Press E to search the corpse
     </div>
     <div id ="drawer1-text" class="interact-text">
-      Press E to search the left drawer
+      Press O to open the left drawer
     </div>
     <div id ="drawer2-text" class="interact-text">
-      Press E to search the right drawer 
+      Press O to open the right drawer 
     </div>
     <div id ="gooddrawer-text" class="interact-text">
-      Press E to search the center drawer
+      Press O to open the center drawer
+    </div>
+    <div id ="good-text" class="interact-text">
+      You received a note, a bottle and a magnetic card
+    </div>
+    <div id ="bad-text" class="interact-text">
+      This drawer is locked
+    </div>
+    <div id ="searched-text" class="interact-text">
+      The drawer is now empty
+    </div>
+    <div id ="useCard-text" class="interact-text">
+      Press O to use the magnetic card
+    </div>
+    <div id ="dontOpen-text" class="interact-text">
+      This card don't seems to open this door...
+    </div>
+    <div id ="Open-text" class="interact-text">
+      The door is now open !
+    </div>
+    <div id ="openDoor-text" class="interact-text">
+      Press O to open the door
+    </div>
+    <div id ="closedDoor-text" class="interact-text">
+      The door is locked
     </div>
   </div>
   <!--
