added four digits code and fixed infected still interacting after loading a new room

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 
     <!-- Interactions -->
     <div id="hud-text" class="hud-text">
-      You searched the corpse and found a key
+      You searched the corpse and found an eye
+    </div>
+    <div id="solved-code-text" class="hud-text">
+      You found the hospital key
     </div>
     <div id="interact-text" class="interact-text">
       Press E to search the corpse
@@ -40,6 +43,12 @@
     </div>
     <div id="gooddrawer-text" class="interact-text">
       Press E to search the center drawer
+    </div>
+
+    <!-- Four digits code -->
+    <div id="code-text" class="code-text">
+      <span>Enter the code</span>
+      <span id="code-input" class="code-input"></span>
     </div>
   </div>
   <script type="module" src="./src/main.js"></script>
