voici le couloir presque fini

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <div id ="closedDoor-text" class="interact-text">
       The door is locked
     </div>
+    <div id ="zombieDoor-text" class="interact-text">
+      Are you OK ??? Do you want to die ?
+    </div>
   </div>
   <!--
   <script src="./jsm/libs/ammo.wasm.js"></script>
