voici le merge avec le couloir et le code

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
     <div id ="zombieDoor-text" class="interact-text">
       Are you OK ??? Do you want to die ?
     </div>
+
+    <!-- Four digits code -->
+    <div id="code-text" class="code-text">
+      <span>Enter the code</span>
+      <span id="code-input" class="code-input"></span>
+    </div>
   </div>
   <script type="module" src="./src/main.js"></script>
 </body>
