--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
   <title>three_vite</title>
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="./src/main.css">
+
+  <!-- css style -->
+  <style>
+    /* Dialogue Container styles */
+    #dialogue-container {
+      position: absolute;
+      bottom: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      z-index: 10;
+    }
+
+    #character-image {
+      width: 150px;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+
+    #dialogue-box {
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      max-width: 300px;
+      margin: 10px auto 0;
+    }
+  </style>
 </head>
 
 <body>
@@ -36,13 +65,13 @@
       Press E to search the corpse
     </div>
     <div id ="drawer1-text" class="interact-text">
-      Press O to open the left drawer
+      Press E to open the left drawer
     </div>
     <div id ="drawer2-text" class="interact-text">
-      Press O to open the right drawer 
+      Press E to open the right drawer 
     </div>
     <div id ="gooddrawer-text" class="interact-text">
-      Press O to open the center drawer
+      Press E to open the center drawer
     </div>
     <div id ="good-text" class="interact-text">
       You received a note, a bottle and a magnetic card
@@ -54,7 +83,7 @@
       The drawer is now empty
     </div>
     <div id ="useCard-text" class="interact-text">
-      Press O to use the magnetic card
+      Press E to use the magnetic card
     </div>
     <div id ="dontOpen-text" class="interact-text">
       This card don't seems to open this door...
@@ -63,13 +92,27 @@
       The door is now open !
     </div>
     <div id ="openDoor-text" class="interact-text">
-      Press O to open the door
+      Press E to open the door
     </div>
     <div id ="closedDoor-text" class="interact-text">
       The door is locked
     </div>
     <div id ="zombieDoor-text" class="interact-text">
       Are you OK ??? Do you want to die ?
+    </div>
+    <div id ="launchDialogue-text" class="interact-text">
+      Press E to talk to your brother.
+    </div>
+
+    <!-- Dialogue Overlay -->
+    <div id="dialogue-container" style="display: none;">
+      <!-- Character Image -->
+      <img id="character-image" src="assets/images/brother.png" alt="Character">
+
+      <!-- Dialogue Box -->
+      <div id="dialogue-box">
+          <p id="dialogue-text">Hello, adventurer! What brings you here?</p>
+      </div>
     </div>
 
     <!-- Four digits code -->
