added door key, wound interaction and first music

--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
       <img src="assets/images/report.png" alt="report">
     </div>
 
+    <!-- Character dialogue -->
+    <div id="infected-bite" class="dialogue">
+      Ouch! He bit me!
+    </div>
+
     <!-- HUD text -->
+    <div id="door-exam" class="hud-text">
+      The door is locked, find a key
+    </div>
     <div id="corpse-exam" class="hud-text">
       The muscles are beginning to stiffen, the body is still warm
     </div>
@@ -50,6 +58,9 @@
     </div>
 
     <!-- Exterior interactions -->
+    <div id="door-text" class="interact-text">
+      Press E to enter the hospital
+    </div>
     <div id="corpse-text" class="interact-text">
       Press E to examine the corpse
     </div>
