--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>three_vite</title>
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="./src/main.css">
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "./assets/js/three-module.js",
+        "three/examples/": "./assets/js/examples/"
+      }
+    }
+    </script>
 </head>
 
 <body>
