--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title>three_vite</title>
-  <link rel="icon" href="favicon.png">
+  <title>Infected</title>
+  <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" href="./src/main.css">
   <script type="importmap">
     {
