added exit button and help for readme

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
     <div id="charles-note-text" class="interact-text">
       Press E to read the paper
     </div>
+    <div id="exit-prompt" class="exit-button" style="display: none;">
+      Press E to exit.
+    </div>
 
     <!-- Four digits code -->
     <div id="code-text" class="code-text">
@@ -157,9 +160,6 @@
         <div id="dialogue-speaker" class="dialogue-speaker"></div>
         <div id="dialogue-text" class="dialogue-text"></div>
         <div class="enter-text">Space</div>
-        <div id="exit-prompt" class="exit-button">
-          Press E to exit.
-        </div>
       </div>
     </div>
 
