--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 <body>
   <div id="container">
     <!-- Utils -->
-    <div id="loader" class="loader"></div>
+    <div id="loader" class="loading-container">
+      <div class="loading-text">Loading...</div>
+      <div class="loading-bar-container">
+        <div class="loading-bar"></div>
+      </div>
+    </div>    
     <div id="blackscreen" class="blackscreen"></div>
     <div id="faded-screen" class="faded-screen"></div>
     <div id="damage-overlay" class="damage-overlay"></div>
