voici la modification pour la compréhension

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Four digits code -->
     <div id="code-text" class="code-text">
-      <span>Enter the code</span>
+      <span>Enter the four digits code</span>
       <span id="code-input" class="code-input"></span>
     </div>
 
