--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>Infected</title>
-  <link rel="icon" href="/RAUG-Cahet-Codron/favicon.ico">
+  <link rel="icon" href="/RAUG-Cahet-Codron/favicon.ico">
 
   <script type="importmap">
     {
@@ -46,7 +46,7 @@
 
     <!-- Four digits code -->
     <div id="code-text" class="code-text">
-      <span>Enter the code</span>
+      <span>Enter the four digits code</span>
       <span id="code-input" class="code-input"></span>
     </div>
 
@@ -177,7 +177,7 @@
       <div id="pause-text" class="intro-text"></div>
     </div>
   </div>
-  <!-- Script -->
+  <!-- Script -->
 </body>
 
 </html>
