added sign and corrected grammar

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       Press E to use the magnetic card
     </div>
     <div id="noCard-text" class="interact-text">
-      It seems this door can be open with a magnetic card
+      It seems this door can be opened with a magnetic card
     </div>
     <div id="useCard-text" class="interact-text">
       Press E to use the magnetic card
